[package]
name = "umbra-system"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
anyhow = "1.0"
umbra-core = { path = "../umbra/crates/umbra-core" }
umbra-rpc = { path = "../umbra/crates/umbra-rpc" }
umbra-sweep = { path = "../umbra/crates/umbra-sweep" }
umbra-client = { path = "../umbra/crates/umbra-client" }
umbra-storage = { path = "../umbra/crates/umbra-storage" }
umbra-api = { path = "../umbra/crates/umbra-api" }
solana-client = "3.1.1"
solana-sdk = "3.0.0"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22.1"
bincode = "1.3.3"
