[package]
name = "umbra-system"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
anyhow = "1.0"
umbra-rs = { path = "../umbra/crates/umbra-rs" }
solana-client = "2.1.0"
solana-sdk = "2.1.0"
solana-transaction-status = "2.1.0"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8.5"
base64 = "0.22.1"
bincode = "1.3.3"
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
    "uuid",
] }
spl-memo = "4.0.0"
bs58 = "0.5.1"
hex = "0.4.3"
curve25519-dalek = "4.1"

[dev-dependencies]
sha2 = "0.10"
